--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@
     }
     
 .close {
-    margin-top: 0.3em;
+    margin-top: 0.5em;
     width:40px;
     height:17px;
     color:white;
@@ -45,16 +45,32 @@
     display:flex;
     justify-content: space-between;
     background-color:rgb(28, 51, 90) ;
-    height: 1.8em;
+    height: 1.99em;
     border-top-left-radius: 3.1px;
     border-top-right-radius: 3.1px;
 }
 
 .title{
-    margin-top: 0.3em;
+    margin-top: 0.5em;
     margin-left: 0.5em;
     align-items: center;
     color:white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px;
+}
+
+.fieldOfSelection{
+    display:flex;
+    flex-direction: column;
+}
+
+
+.label_dev{
+height: 1em;
+width:5em;
+}
+
+input{
+    width:60em;
+    text-align: center;
 }
