--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,7 +103,7 @@ margin-left: 0.3em;
   text-align: right;
   align-items: right;
   height: auto;
-  border:none; 
+    border:none; 
   background-color:#f3f3f4;
 }
 
@@ -121,7 +121,7 @@ margin-left: 0.3em;
 }
 
 .refresh button{
- padding-right:0.2em
+ padding-right: 0.2em;
 }
 
 .listButton img {
